refactor: seperate project to client and server